# caped-ai-skeletonize

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/caped_ai_skeletonize/: caped.yaml
