[metadata]
name = caped-ai-skeletonize

description = A python package to do skeletonization in 2D 3D + time datasets and track their end points
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/caped-ai-skeletonize
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/caped-ai-skeletonize/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/caped-ai-skeletonize#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/caped-ai-skeletonize
    User Support = https://github.com/Kapoorlabs-CAPED/caped-ai-skeletonize/issues

[options]
packages = find:
install_requires =
    caped-ai

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    caped-ai-skeletonize = caped_ai_skeletonize:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
